--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,11 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
-        "illuminate/support": "^8.0"
+        "php": "^8.0.2",
+        "illuminate/support": "^8.42|^9.0",
+        "torchlight/torchlight-commonmark": "*",
+        "torchlight/torchlight-laravel": "^0.5.11",
+        "graham-campbell/markdown": "*"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
