--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
     "require": {
         "php": "^8.0.2",
         "illuminate/support": "^8.42|^9.0",
+        "league/commonmark": "^2.2",
         "torchlight/torchlight-commonmark": "*",
-        "torchlight/torchlight-laravel": "^0.5.11",
-        "graham-campbell/markdown": "*"
+        "torchlight/torchlight-laravel": "^0.5.11"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
