Update documentation and add more default pages

--- a/resources/docs/linkIndex.yml
+++ b/resources/docs/linkIndex.yml
@@ -1,3 +1,8 @@
 # Rearrange the list items below to decide the order of navigation links in the sidebar
 Links:
   - index
+  - readme
+  - getting-started
+  - contributing
+  - changelog
+  - license
