--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "laradocgen",
   "version": "0.1.0",
-  "description": "LaraDocGen Frontend Assets",
+  "description": "Laradocgen Frontend Assets",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
