--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
         "desilva",
         "laradocgen"
     ],
-    "homepage": "https://github.com/caendesilva/docgen",
+    "homepage": "https://github.com/caendesilva/laradocgen",
     "license": "MIT",
     "type": "library",
     "authors": [
@@ -24,7 +24,7 @@
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
-        "phpunit/phpunit": "^9.0"
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
