--- a/.github/workflows/laravel-tests.yml
+++ b/.github/workflows/laravel-tests.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Copy .env
       run: cd tests/laravel && php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
-      run: cd tests/laravel && composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+      run: cd tests/laravel && composer install -q --no-ansi --no-interaction --no-progress --prefer-dist
     - name: Generate key
       run: cd tests/laravel && php artisan key:generate
     - name: Directory Permissions
