Exclude the tests directory from Composer

--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,9 @@
     "config": {
         "sort-packages": true
     },
+    "archive": {
+        "exclude": ["/tests"]
+    },
     "extra": {
         "laravel": {
             "providers": [
