--- a/.github/workflows/laravel-tests.yml
+++ b/.github/workflows/laravel-tests.yml
@@ -2,9 +2,9 @@ name: 🧪 Run Test Suite
 
 on:
   push:
-    branches: [ tests ]
+    branches: [ master ]
   pull_request:
-    branches: [ tests ]
+    branches: [ master ]
 
 jobs:
   laravel-tests:
